src/test/ui/issues/issue-46112.stderr
error[E0308]: mismatched types
  --> $DIR/issue-46112.rs:9:21
   |
LL | fn main() { test(Ok(())); }
   |                     ^^
   |                     |
   |                     expected enum `std::option::Option`, found ()
   |                     help: try using a variant of the expected type: `Some(())`
   |
   = note: expected type `std::option::Option<()>`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
